--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "m5-d3blog-post-api",
   "version": "1.0.0",
   "description": "",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,6 +23,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-list-endpoints": "^6.0.0",
+    "fs-extra": "^10.0.0",
+    "multer": "^1.4.3",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
